# bolero

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  environment.yml  index.html  install.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test.bed  test.fa  test.fa.fai  test_parallel_borzoi.py
.github/workflows/: build.yaml  docs.yaml  release.yaml  test.yaml
api/: index.html
api/datasets_pseudobulks/: index.html
api/genome_sequence/: index.html
api/interpretation/: index.html
api/plotting/: index.html
api/prediction/: index.html
api/training/: index.html
docs/: index.md  installation.md
docs/api/: datasets_pseudobulks.md  genome_sequence.md  index.md  interpretation.md  plotting.md  prediction.md  training.md
docs/tutorials/: 01_cell_embedding.ipynb  02_meta_cell.ipynb
docs/tutorials/cross_species/: 15_cross_species_prediction.ipynb
docs/tutorials/embedding_and_meta_cell/: 02_meta_cell.ipynb
docs/tutorials/meta_cell_adata_and_parquet/: 03_meta_cell_adata.ipynb  04_parquet_dataset.ipynb  05_pseudobulk_and_reference.ipynb
docs/tutorials/model_training/: 07_train_multi_dataset_atac.ipynb  08_train_multi_dataset_gene.ipynb
docs/tutorials/prediction/: 09_prediction_task.ipynb  10_qtl_task.ipynb  11_attribution_task.ipynb
docs/tutorials/score_model/: 12_chromvar_score.ipynb  13_train_score_model.ipynb  14_predict_score_model.ipynb
envs/: sky-jupyter-large-spot.yaml  sky-jupyter-spot.yaml
installation/: index.html
search/: search_index.json
skypilot/: setup-bolero.yaml  setup_empty.yaml  sky-bolero-A100.yaml  sky-bolero-cpu.yaml  sky-bolero-small.yaml  sky-bolero.yaml  sky-h100.yaml
skypilot/examples/: prepare.ipynb  run_notebook.yaml  train-cov_bias-bolero_cell.yaml  train-knn+topic-bolero_cell.yaml  train-knn-bolero_cell.yaml  train-knn-bolero_cell_group.yaml  train-knn-bolero_concat.yaml  train-knn-bolero_concat_group.yaml  train-knn-bolero_concat_group_noover.yaml  train-knn-cell_scp.yaml  train-topic-bolero_cell.yaml  train_bulk.yaml  train_k562.yaml
src/bolero/: __init__.py  utils.py
src/bolero/pkg_data/: cbust_macos
src/bolero/pkg_data/borzoi/: hg38_sequences.bed  mm10_sequences.bed
src/bolero/pkg_data/creformer/: kmer_dict.pkl
src/bolero/pkg_data/figr/: CisBP_Human_FigR  CisBP_Mouse_FigR
src/bolero/pkg_data/jaspar/: CisBP_Human_FigR.motif_pwm.dict  CisBP_Mouse_FigR.motif_pwm.dict  JASPAR2024_CORE_diatoms_non-redundant_pfms_jaspar.motif_pwm.dict  JASPAR2024_CORE_fungi_non-redundant_pfms_jaspar.motif_pwm.dict  JASPAR2024_CORE_insects_non-redundant_pfms_jaspar.motif_pwm.dict  JASPAR2024_CORE_nematodes_non-redundant_pfms_jaspar.motif_pwm.dict  JASPAR2024_CORE_non-redundant_pfms_jaspar.motif_pwm.dict  JASPAR2024_CORE_plants_non-redundant_pfms_jaspar.motif_pwm.dict  JASPAR2024_CORE_vertebrates.motif_cluster.joblib  JASPAR2024_CORE_vertebrates_non-redundant_pfms_jaspar.motif_pwm.dict
src/bolero/pkg_data/scprinter/: Tn5_NN_model_py_v2.pt  dispersion_model_py_v2.h5
src/bolero/pl/: __init__.py  borzoi.py  de.py  footprint.py  hic.py  igv.py  mc.py  seqlogo.py  track1d.py  utils.py
src/bolero/pp/: __init__.py  gene_dataset.py  genome.py  genome_chunk_dataset.py  genome_dataset.py  gtf.py  normalize.py  prepare_ray_dataset.py  ray_chunk_dataset.py  seq.py  snap_adata.py  utils.py
src/bolero/tl/chromvar/: chromvar.py
src/bolero/tl/dataset/: dataset.py  file_transforms.py  filters.py  parquet_db.py  ray_dataset.py  (+5 more)
src/sbatch/: __init__.py  array.py  main.py  sbatch.py
tests/: hg38_sequences_fold2.bed  hg38_sequences_fold3.bed  hg38_sequences_fold4.bed  hg38_sequences_fold5.bed  hg38_sequences_fold6.bed  hg38_sequences_fold7.bed  test_basic.py  test_borzoi_loader.ipynb  test_borzoi_trainer.ipynb  test_flash_attn.py  test_genome.py  test_seq  test_seq.py
tests/borzoi/: test_borzoi_dataloader.py  test_borzoi_hic_module.py  test_borzoi_trainer.py  test_corigami_borzoi_trainer.py  test_corigami_borzoi_trainer_all_cell_types.py  test_two_region_corigami_borzoi_trainer.py
tests/borzoi/inference/: inference_corigami.py
tests/corigami/: train_breakdown_example.py  train_example.py  train_example_with_corigami_data.py  train_example_with_dna_seq_only.py  train_example_with_lora_corigami.py
tests/corigami/inference/: diff_loop_heatmap.ipynb  inference_corigami.py  inference_hic_plot.py  temp.bed
tests/corigami/training/: conditional_lora_finetune_corigami.py  lora_finetune_corigami.py  pretrain_corigami.py  train_breakdown_example.py
tests/enformer/: lora_enformer_pretrain.ipynb  test_basic.py
tests/flow/: test_datamanager.py  test_vf.py
tests/lora/: lora_corigami.ipynb  test_lora.py
tests/mc/: data_check.ipynb  test_dataset.ipynb  test_trainer.ipynb
tests/motif/: test_motif.py
tests/tfbs_model/: prepare_checkpoints.ipynb  tfbs_model_compare_tfbs.ipynb
tutorials/cross_species/15_cross_species_prediction/: 15_cross_species_prediction.ipynb  index.html
tutorials/embedding_and_meta_cell/01_cell_embedding/: 01_cell_embedding.ipynb  index.html
tutorials/embedding_and_meta_cell/02_meta_cell/: index.html
tutorials/meta_cell_adata_and_parquet/03_meta_cell_adata/: 03_meta_cell_adata.ipynb  index.html
tutorials/meta_cell_adata_and_parquet/04_parquet_dataset/: index.html
tutorials/meta_cell_adata_and_parquet/05_pseudobulk_and_reference/: 05_pseudobulk_and_reference.ipynb  index.html
tutorials/model_training/06_train_borzoi_lora/: 06_train_borzoi_lora.ipynb  index.html
tutorials/model_training/07_train_multi_dataset_atac/: 07_train_multi_dataset_atac.ipynb  index.html
tutorials/model_training/08_train_multi_dataset_gene/: 08_train_multi_dataset_gene.ipynb  index.html
tutorials/prediction/09_prediction_task/: 09_prediction_task.ipynb  index.html
tutorials/prediction/10_qtl_task/: 10_qtl_task.ipynb  index.html
tutorials/prediction/11_attribution_task/: index.html
tutorials/score_model/12_chromvar_score/: index.html
tutorials/score_model/13_train_score_model/: 13_train_score_model.ipynb  index.html
tutorials/score_model/14_predict_score_model/: 14_predict_score_model.ipynb  index.html
(+160 files in other folders)
