[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "bolero"
dynamic = ["version"]
description = "sequence"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hanqing Liu" }, { name = "Hanchen Wang" }]
maintainers = [
    { name = "Hanqing Liu", email = "hanqingliu@fas.harvard.edu" },
    { name = "Hanchen Wang", email = "hanchenw.au@gmail.com" },
]
urls.Documentation = "https://liuhlab.github.io/bolero/"
urls.Source = "https://github.com/lhqing/bolero"
urls.Home-page = "https://github.com/lhqing/bolero"
dependencies = [
    "anndata",
    "beartype",
    "biopython",
    "captum",
    "cooler",
    "click",
    "duckdb",
    "deeptools",
    "einops",
    "gensim",
    "geosketch",
    "gffutils",
    "joblib",
    "openTSNE",
    "pyfaidx",
    "pynndescent",
    "pyranges",
    "seaborn",
    "session-info",
    "tangermeme",
    "tmtoolkit",
    "tqdm",
    "torchinfo",
    "torchmetrics>=1.6.0",
    "torchscale",
    "transformers",
    "scvi-tools",
    "wandb",
    "vector_quantize_pytorch",
    "xarray",
    # "ray==2.34", # do not add ray as a dependency; install it separately pinned to 2.34 (see docs/installation.md) otherwise skypilot will have issue
    "zarr",
]

[project.scripts]
mysbatch = "sbatch.main:submitter"

[project.optional-dependencies]
dev = ["pre-commit", "twine>=4.0.2", "black", "isort"]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",       # API docs from numpy-style docstrings
    "mkdocs-jupyter",             # render notebooks
    "pymdown-extensions",
]
notebook = [
    "papermill",
    "jupyterlab-code-formatter",
    "jupyterlab-execute-time",
    "qnorm",
]
test = ["pytest", "coverage"]

[tool.coverage.run]
source = ["bolero"]
omit = ["**/test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib", # allow using test files with same name
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
src = ["src"]
line-length = 88
lint.select = [
    "F",      # Errors detected by Pyflakes
    "E",      # Error detected by Pycodestyle
    "W",      # Warning detected by Pycodestyle
    "I",      # isort
    "D",      # pydocstyle
    "B",      # flake8-bugbear
    "TID",    # flake8-tidy-imports
    "C4",     # flake8-comprehensions
    "BLE",    # flake8-blind-except
    "UP",     # pyupgrade
    "RUF100", # Report unused noqa directives
]
lint.ignore = [
    # line too long -> we accept long comment lines; formatter gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D200",
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    "D101",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]    "D400",
    # First line should be in imperative mood; try rephrasing
    "D400",
    "D401",
    "D404",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203",
    "D205",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
]
extend-include = ["*.ipynb"]
exclude = [
  "src/bolero/tl/generic/ema.py",
  "tests/"
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/bolero", "src/sbatch"]

# ---------------------------------------------------------------------------
# pixi
# ---------------------------------------------------------------------------
[tool.pixi.workspace]            # older pixi (<0.39): [tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = [{ platform = "linux-64", cuda = "12" }] # cuda=12 → select CUDA-12.x builds

# bolero itself, editable — pulls in [project.dependencies] from PyPI
[tool.pixi.pypi-dependencies]
bolero = { path = ".", editable = true }

# conda-provided stack (system tools, compiled scientific libs, bioinformatics, GPU)
[tool.pixi.dependencies]
python = "3.11.*"
pip = "*"
# deep learning (GPU, CUDA 12.x from conda-forge; build glob forces the cuda build)
cuda-version = "12.*"
pytorch = { version = "2.4.*", build = "cuda*" }
torchvision = { version = "*", build = "cuda*" }
# bioinformatics / system tools (bioconda)
bedtools = "*"
samtools = "*"
htslib = "*"
pysam = "*"
deeptools = "*"
cooler = "*"
snakemake = "*"
# scientific stack (conda binaries)
numpy = "*"
pandas = "*"
scipy = "*"
scikit-learn = "*"
scikit-image = "*"
matplotlib = "*"
seaborn = "*"
pyarrow = "*"
dask = "*"
scanpy = "*"
pynndescent = "*"
biopython = "*"
xarray = "*"
zarr = "*"
# notebooks
jupyterlab = "*"
ipywidgets = "*"

# give the standalone `docs` environment its own interpreter (the doc feature
# otherwise only carries the pypi mkdocs tooling)
[tool.pixi.feature.doc.dependencies]
python = "3.11.*"

[tool.pixi.feature.doc.tasks]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build --strict"
docs-deploy = "mkdocs gh-deploy --force" # build & push to the gh-pages branch

[tool.pixi.feature.dev.tasks]
lint = "pre-commit run --all-files"

[tool.pixi.feature.test.tasks]
test = "coverage run -m pytest -v --color=yes"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "test", "notebook"], solve-group = "default" }
docs = { features = ["doc"], no-default-feature = true } # lightweight: no torch/CUDA
