[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "bolero"
dynamic = ["version"]
description = "Predicting cell-state-specific gene regulation from DNA sequence."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hanqing Liu" }, { name = "Hanchen Wang" }]
maintainers = [
    { name = "Hanqing Liu", email = "hanqingliu@fas.harvard.edu" },
    { name = "Hanchen Wang", email = "hanchenw.au@gmail.com" },
]
urls.Documentation = "https://liuhlab.github.io/bolero/"
urls.Source = "https://github.com/liuhlab/bolero"
urls.Home-page = "https://github.com/liuhlab/bolero"
dependencies = [
    "anndata",
    "beartype",
    "biopython",
    "captum",
    "cooler",
    "click",
    "duckdb",
    "deeptools",
    "einops",
    "gensim",
    "geosketch",
    "gffutils",
    "joblib",
    "openTSNE",
    "pyfaidx",
    "pynndescent",
    "pyranges",
    "seaborn",
    "session-info",
    "snapatac2==2.9.0",
    "tangermeme",
    "tmtoolkit",
    "tqdm",
    "torchinfo",
    "torchmetrics>=1.6.0",
    "torchscale",
    "transformers",
    "scvi-tools",
    "wandb",
    "vector_quantize_pytorch",
    "xarray",
    "zarr",
]

[project.scripts]
mysbatch = "sbatch.main:submitter"

[project.optional-dependencies]
dev = ["pre-commit", "twine>=4.0.2", "black", "isort"]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",       # API docs from numpy-style docstrings
    "mkdocs-jupyter",             # render notebooks
    "pymdown-extensions",
]
notebook = [
    "papermill",
    "jupyterlab-code-formatter",
    "jupyterlab-execute-time",
    "qnorm",
]
test = ["pytest", "coverage"]

[tool.coverage.run]
source = ["bolero"]
omit = ["**/test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib", # allow using test files with same name
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
src = ["src"]
line-length = 88
lint.select = [
    "F",      # Errors detected by Pyflakes
    "E",      # Error detected by Pycodestyle
    "W",      # Warning detected by Pycodestyle
    "I",      # isort
    "D",      # pydocstyle
    "B",      # flake8-bugbear
    "TID",    # flake8-tidy-imports
    "C4",     # flake8-comprehensions
    "BLE",    # flake8-blind-except
    "UP",     # pyupgrade
    "RUF100", # Report unused noqa directives
]
lint.ignore = [
    # line too long -> we accept long comment lines; formatter gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D200",
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    "D101",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]    "D400",
    # First line should be in imperative mood; try rephrasing
    "D400",
    "D401",
    "D404",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203",
    "D205",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
]
extend-include = ["*.ipynb"]
exclude = [
  "src/bolero/tl/generic/ema.py",
  "tests/"
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I", "D"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]

[tool.hatch.version]
# This package uses Calendar Versioning (CalVer): tag releases as vYYYY.MM.DD
# (e.g. v2026.07.10). The version is derived from the latest git tag by hatch-vcs,
# so the scheme is set by how releases are tagged.
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/bolero", "src/sbatch"]

# ---------------------------------------------------------------------------
# pixi
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
# The rich `linux-64-cuda` entry pins the `__cuda` virtual package for the solver.
# GPU environments opt into it via the `gpu` feature (below) so the `docs` env,
# which stays on plain `linux-64`, remains CUDA-free and buildable on GPU-less CI.
platforms = ["linux-64", { name = "linux-64-cuda", platform = "linux-64", cuda = "12" }]

[tool.pixi.pypi-dependencies]
bolero = { path = ".", editable = true }
ray = "==2.34"
# Companion registry package (datasets, model zoo, QTL/DA metadata). Pulled from
# git; it is deliberately lightweight (no GPU stack) and runs inside this env.
bolerodata = { git = "https://github.com/liuhlab/bolerodata.git", branch = "main" }
# SEACells metacell calling (CPU path only). Our fork relaxes the upstream's old,
# exact version pins so it co-installs cleanly with the GPU stack here.
SEACells = { git = "https://github.com/liuhlab/SEACells_pixi.git", branch = "main" }
# MOODS motif scanner (used by bolero.tl.motif / the chromVAR peak motif matching).
# Our fork ships a scikit-build-core/CMake build so it installs cleanly from git here.
MOODS-python = { git = "https://github.com/liuhlab/MOODS_pixi.git", branch = "master" }

[tool.pixi.dependencies]
python = "3.11.*"
pip = "*"

# Deep learning (GPU). cuda-version is the CUDA build target, not a minimum driver:
# 12.6 is conda-forge's lowest `triton` build, so it runs on the widest range of
# drivers (installs on CUDA >= 12.0). See docs/installation.md for the full policy.
cuda-version = "12.6.*"
pytorch = { version = "2.4.*", build = "cuda*" }
torchvision = { version = "*", build = "cuda*" }
# flash-attn (+ triton, its rotary backend) from conda-forge so the C++ ABI matches
# conda-forge PyTorch; cuda-cudart-dev provides the cuda.h that triton JIT needs.
flash-attn = "*"
triton = "*"
cuda-cudart-dev = "*"
# GPU array/sparse backend for the chromVAR AP-1 deviations (tl/chromvar); the
# build is selected against the cuda-version pin above.
cupy = "*"

# Bioinformatics / system tools (bioconda)
bedtools = "*"
samtools = "*"
htslib = "*"
pysam = "*"
# pyfaidx is pulled in transitively by conda (deeptools etc.), which otherwise
# grabs the latest (0.9.x). Cap it below 0.9 so the conda-pinned version stays
# compatible with snapatac2 2.9.0 (which requires pyfaidx<0.9).
pyfaidx = "<0.9"
deeptools = "*"
cooler = "*"
snakemake = "*"

# Scientific stack
numpy = "*"
pandas = "*"
scipy = "*"
scikit-learn = "*"
scikit-image = "*"
matplotlib = "*"
seaborn = "*"
pyarrow = "*"
dask = "*"
scanpy = "*"
pynndescent = "*"
biopython = "*"
xarray = "*"
zarr = "*"

# Notebooks
jupyterlab = "*"
ipywidgets = "*"
ipykernel = "*"

# Default-environment tasks.
[tool.pixi.tasks]
# Register the default env as a Jupyter kernel named `bolero`.
install-kernel = "python -m ipykernel install --user --name bolero --display-name bolero"

# Carries only the CUDA-pinned platform; added to the GPU environments below.
[tool.pixi.feature.gpu]
platforms = ["linux-64-cuda"]

# Standalone `docs` env needs its own interpreter (the doc feature is pypi-only).
# Restricted to plain `linux-64` so it never requires the `__cuda` virtual package.
[tool.pixi.feature.doc]
platforms = ["linux-64"]

[tool.pixi.feature.doc.dependencies]
python = "3.11.*"

[tool.pixi.feature.doc.tasks]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build --strict"
docs-deploy = "mkdocs gh-deploy --force" # build & push to the gh-pages branch

[tool.pixi.feature.dev.dependencies]
# Pin ruff to the version used by the ruff-pre-commit hook (v0.3.7) so a directly
# invoked `ruff` (and JupyterLab's code formatter) reads the same pyproject.toml
# `[tool.ruff]` config — notably `format.docstring-code-format`, which the old
# transitive ruff (0.1.1, pulled by jupyterlab-code-formatter) does not recognize.
ruff = "0.3.7.*"

[tool.pixi.feature.dev.tasks]
lint = "pre-commit run --all-files"

[tool.pixi.feature.test.tasks]
test = "coverage run -m pytest -v --color=yes"

[tool.pixi.environments]
default = { features = ["gpu"], solve-group = "default" }
dev = { features = ["gpu", "dev", "test", "notebook"], solve-group = "default" }
docs = { features = ["doc"], no-default-feature = true } # lightweight: no torch/CUDA
